@@ -34,9 +34,9 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     Sccsid: @(#)nail.1	2.296 (gritter) 3/1/05
+.\"     Sccsid: @(#)nail.1	2.297 (gritter) 3/4/05
 .\"
-.TH NAIL 1 "3/1/05" "nail 11.22" "User Commands"
+.TH NAIL 1 "3/4/05" "nail 11.22" "User Commands"
 .SH NAME
 nail \- send and receive Internet mail
 .SH SYNOPSIS
@@ -2848,7 +2848,7 @@ lfB4 l.
 %d	The date when the message was received.
 %e	The indenting level in threaded mode.
 %f	The address of the message sender.
-%i	One space per threading level.
+%i	The message thread structure.
 %l	The number of lines of the message.
 %m	Message number.
 %o	The number of octets (bytes) in the message.
